  * copyright: fix lintian warning
  
  [ Michael Tautschnig ]
  * fixed several hyphen-used-as-minus-sign errors in man pages
  * update to standards version 3.8.1, no changes needed
  * replaced dh_clean -k by dh_prep
  * use dh_lintian to install lintian overrides
  * added override for fai-nfsroot (diverts foreign /etc/init.d.rcS)
  * Build-Depends: debhelper (>= 7)

 -- Thomas Lange <lange@debian.org>  Sun, 03 May 2009 16:29:10 +0200

fai (3.2.19) unstable; urgency=low

  * subroutines-linux: get-config-dir was never run if -z $monserver,
    which may be the case when no DHCP was done (dirinstall, softupdates,
    or install using fixed IP); problem was introduced by patch in r5338.
    (closes: #525096)
    adjust indentation

 -- Thomas Lange <lange@debian.org>  Wed, 22 Apr 2009 13:39:58 +0200

fai (3.2.18) unstable; urgency=low

  [ Thomas Lange ]
  * control: add depends on net-tools for fai-client (closes: #521027)
  * ainsl: add test if target file exists,
    improve exit codes (closes: #500244)
  * fai-cd: use a pipe when sending commands to grub
  * ftar, fcopy: add info about the other tool
  * new file live.conf will disable some messages during booting
  * make-fai-nfsroot: call apt-get update when using -k (closes: #507892),
    -k now also upgrades all packages inside the nfsroot,
    add -N to install_packages call, this is good for cross architecture
    building the nfsroot
    check if debootstrap finished properly (closes: #524369)
    try to umount mirror before removing old nfsroot (closes: #500208)
  * fai-do-scripts: skip files with certain suffixes (closes: #500579),
    improve test if $debug is set to 1 (closes: #496072)
    call cfagent scripts with -v if fai is in debug mode
  * lib/subroutines-linux: don't rely on ' as a field separator when
    parsing boot.log, use = and strip off any quotes (closes: #439250),
    check earlier if faimond is available, send TASKBEGIN message