@@ -52,7 +52,7 @@ use warnings FATAL => qw(uninitialized);
 
 package FAI;
 
-my $version = "1.0.4";
+my $version = "1.0.5";
 
 # command line parameter handling
 use Getopt::Std;
