@@ -216,7 +216,7 @@ option ::= /* empty */
 .br
            /* attempt to resize partitions */
 .br
-           | disklabel:(msdos|gpt)
+           | disklabel:(msdos|gpt|gpt-bios)
 .br
            /* write a disklabel - default is msdos */
 .br
