@@ -17,8 +17,15 @@ fai (3.2.20) unstable; urgency=low
   * use dh_lintian to install lintian overrides
   * added override for fai-nfsroot (diverts foreign /etc/init.d.rcS)
   * Build-Depends: debhelper (>= 7)
+  * setup-storage/Sizes.pm: Clarified error message in cases where the user
+    specified a partition is larger than the entire disk
+  * setup-storage/Parser.pm, setup-storage/Sizes.pm, setup-storage/Volumes.pm:
+    Added pseudo-disklabel gpt-bios to support GPT on systems with BIOS
+    instead of EFI. Also installs an additional partition to store whatever
+    doesn't fit into MBR.
+  * setup-storage: bumped version to 1.0.5 (gpt-bios support)
 
- -- Thomas Lange <lange@debian.org>  Sun, 03 May 2009 16:29:10 +0200
+ -- Thomas Lange <lange@debian.org>  Sun, 03 May 2009 16:57:45 +0200
 
 fai (3.2.19) unstable; urgency=low
 
